[gd_scene load_steps=3 format=3 uid="uid://d2poikkw0k6mo"]

[ext_resource type="Script" path="res://Scripts/mouse.gd" id="1_07bqd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rarq8"]

[node name="Mouse" type="Node2D"]
script = ExtResource("1_07bqd")

[node name="Node" type="Node" parent="."]

[node name="Area2D" type="Area2D" parent="Node"]
z_index = 50
z_as_relative = false
collision_layer = 512
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="Node/Area2D"]
visible = false
position = Vector2(10, 10)
shape = SubResource("RectangleShape2D_rarq8")

[node name="rectangleMarker" type="Marker2D" parent="Node"]
unique_name_in_owner = true

[node name="rectangleLine" type="Line2D" parent="Node/rectangleMarker"]
unique_name_in_owner = true
z_index = 500
z_as_relative = false
points = PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0)
width = 2.0

[node name="HoveredTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="Sprite2D" type="Sprite2D" parent="."]

[connection signal="area_entered" from="Node/Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Node/Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="HoveredTimer" to="." method="_on_hovered_timer_timeout"]
